--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>eu.adlogix.com.google.api.ads.dfp</groupId>
     <artifactId>googleads-dfp-utils</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Google Ads DFP Utilities</name>
