New method adUnitFinder.getByIds(...) + Add finder for Placements

--- a/pom.xml
+++ b/pom.xml
@@ -156,5 +156,11 @@
             <artifactId>guava</artifactId>
             <version>16.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.8.8</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
