--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,6 @@
 				<version>2.2.1</version>
 				<executions>
 					<execution>
-						<phase>package</phase>
 						<goals>
 							<goal>jar</goal>
 						</goals>
@@ -105,11 +104,14 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.9.1</version>
-				<configuration>
-					<reportOutputDirectory>.</reportOutputDirectory>
-					<destDir>javadocs</destDir>
-				</configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
