--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>eu.adlogix.com.google.api.ads.dfp</groupId>
 	<artifactId>googleads-dfp-utils</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>0.0.9</version>
 	<packaging>jar</packaging>
 
 	<name>Google Ads DFP Utilities</name>
