--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>eu.adlogix.com.google.api.ads.dfp</groupId>
 	<artifactId>googleads-dfp-utils</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>0.0.10</version>
 	<packaging>jar</packaging>
 
 	<name>Google Ads DFP Utilities</name>
@@ -27,7 +26,8 @@
 		<connection>scm:git:git@github.com:adlogix/googleads-dfp-utils.git</connection>
 		<developerConnection>scm:git:git@github.com:adlogix/googleads-dfp-utils.git</developerConnection>
 		<url>git@github.com:adlogix/googleads-dfp-utils.git</url>
-	</scm>
+	  <tag>0.0.10</tag>
+  </scm>
 
 	<developers>
 		<developer>
@@ -110,6 +110,9 @@
 						<goals>
 							<goal>jar</goal>
 						</goals>
+						<configuration>
+			                <additionalparam>-Xdoclint:none</additionalparam>
+			            </configuration>
 					</execution>
 				</executions>
 			</plugin>
