--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>eu.adlogix.com.google.api.ads.dfp</groupId>
 	<artifactId>googleads-dfp-utils</artifactId>
-	<version>0.0.10</version>
+	<version>0.0.11-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Google Ads DFP Utilities</name>
