--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
 		<connection>scm:git:git@github.com:adlogix/googleads-dfp-utils.git</connection>
 		<developerConnection>scm:git:git@github.com:adlogix/googleads-dfp-utils.git</developerConnection>
 		<url>git@github.com:adlogix/googleads-dfp-utils.git</url>
-	  <tag>0.0.10</tag>
-  </scm>
+		<tag>HEAD</tag>
+	</scm>
 
 	<developers>
 		<developer>
